[gd_scene load_steps=6 format=3 uid="uid://dxxdt7qq5bgr6"]

[ext_resource type="Texture2D" uid="uid://b76me6nc6il0w" path="res://Assets/Factions/Knights/Buildings/Tower/Tower_Construction.png" id="1_8oj68"]
[ext_resource type="Script" path="res://Scripts/Faction/Knights/Buildings/tower.gd" id="1_528vw"]
[ext_resource type="Texture2D" uid="uid://gyrqth7ojvqp" path="res://Assets/Factions/Knights/Buildings/Tower/Tower_Blue.png" id="2_cykcc"]
[ext_resource type="Texture2D" uid="uid://wd8fqccyfb0l" path="res://Assets/Factions/Knights/Buildings/Tower/Tower_Destroyed.png" id="3_63nwg"]
[ext_resource type="PackedScene" uid="uid://m03rx8f1otf3" path="res://Scenes/selected_frame.tscn" id="5_uto5x"]

[node name="Tower" type="Area2D"]
script = ExtResource("1_528vw")

[node name="Building" type="Sprite2D" parent="."]
texture = ExtResource("1_8oj68")

[node name="Build" type="Sprite2D" parent="."]
texture = ExtResource("2_cykcc")

[node name="Destroyed" type="Sprite2D" parent="."]
texture = ExtResource("3_63nwg")

[node name="DestroyedCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-36, 85, -34, 87, -29, 89, -24, 91, -22, 93, -14, 94, 7, 94, 10, 91, 22, 91, 32, 88, 38, 87, 41, 85, 57, 86, 62, 83, 60, 75, 55, 70, 54, 65, 51, 60, 48, 60, 48, 57, 53, 56, 59, 54, 61, 50, 61, 45, 55, 35, 50, 34, 45, 26, 40, 21, 35, 21, 27, 25, 23, 24, 22, 21, 20, 20, 12, 20, 6, 16, -1, 16, -4, 17, -12, 25, -16, 25, -19, 23, -20, 22, -24, 22, -32, 30, -39, 30, -49, 41, -48, 48, -50, 50, -54, 48, -56, 48, -61, 53, -63, 59, -63, 61, -58, 66, -50, 66, -48, 70, -51, 74, -51, 79, -43, 84, -41, 85)

[node name="BuildingCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-43, 82, -36, 90, -28, 96, -25, 96, -20, 94, -17, 93, -10, 94, -2, 94, 10, 94, 16, 93, 20, 93, 22, 96, 28, 94, 36, 92, 43, 82, 43, 46, 43, 46, 40, 38, 35, 32, 22, 24, 16, 23, 8, 22, -8, 22, -16, 23, -21, 24, -33, 30, -41, 39, -43, 46)

[node name="BuildCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-43, 82, -36, 91, -28, 96, -23, 95, 27, 95, 33, 93, 43, 82, 43, 48, 39, 40, 38, 39, 38, 15, 51, 2, 54, -8, 56, -27, 57, -44, 55, -52, 52, -58, 48, -58, 43, -56, 43, -54, 41, -54, 41, -55, 38, -57, 36, -57, 36, -71, 35, -72, 25, -75, 19, -76, 11, -76, 10, -71, 10, -66, 6, -66, 6, -67, -6, -67, -9, -66, -11, -76, -19, -76, -25, -75, -36, -71, -36, -57, -38, -57, -40, -56, -43, -56, -48, -58, -52, -58, -54, -54, -57, -45, -56, -28, -53, -4, -49, 5, -38, 15, -38, 39, -39, 40, -43, 48)

[node name="Stations" type="Node" parent="."]

[node name="Station1" type="Marker2D" parent="Stations"]
position = Vector2(0, -61)

[node name="Spawn" type="Marker2D" parent="."]
position = Vector2(-1, -84)

[node name="SelectedFrame" parent="." instance=ExtResource("5_uto5x")]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
